Changes after code review
Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>